FIxed header spacing

--- a/style.css
+++ b/style.css
@@ -26,6 +26,15 @@ html, body {
   height: 100%;
 }
 
+.button-arr{
+  display: flex;
+  flex-direction: row;
+}
+
+#lang-buttons-arr{
+  padding-right: 50px;
+}
+
 button{
   border: none;
   background: none;
